// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResponseOptions > resolved defaults per driver > ApiPlatform 1`] = `
{
  "currentPage": "current_page",
  "data": "hydra:member",
  "firstPageUrl": "hydra:view.hydra:first",
  "from": "from",
  "lastPage": "last_page",
  "lastPageUrl": "hydra:view.hydra:last",
  "nextPageUrl": "hydra:view.hydra:next",
  "path": "hydra:view.@id",
  "perPage": "per_page",
  "prevPageUrl": "hydra:view.hydra:previous",
  "to": "to",
  "total": "hydra:totalItems",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Directus 1`] = `
{
  "currentPage": "current_page",
  "data": "data",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "last_page",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "per_page",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "meta.filter_count",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Drf 1`] = `
{
  "currentPage": "current_page",
  "data": "results",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "last_page",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next",
  "path": "path",
  "perPage": "per_page",
  "prevPageUrl": "previous",
  "to": "to",
  "total": "count",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Feathers 1`] = `
{
  "currentPage": "current_page",
  "data": "data",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "last_page",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "limit",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "total",
}
`;

exports[`ResponseOptions > resolved defaults per driver > JsonApi 1`] = `
{
  "currentPage": "meta.current-page",
  "data": "data",
  "firstPageUrl": "links.first",
  "from": "meta.from",
  "lastPage": "meta.page-count",
  "lastPageUrl": "links.last",
  "nextPageUrl": "links.next",
  "path": "path",
  "perPage": "meta.per-page",
  "prevPageUrl": "links.prev",
  "to": "meta.to",
  "total": "meta.total",
}
`;

exports[`ResponseOptions > resolved defaults per driver > JsonServer 1`] = `
{
  "currentPage": "current_page",
  "data": "data",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "pages",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "per_page",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "items",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Nestjs 1`] = `
{
  "currentPage": "meta.currentPage",
  "data": "data",
  "firstPageUrl": "links.first",
  "from": "meta.from",
  "lastPage": "meta.totalPages",
  "lastPageUrl": "links.last",
  "nextPageUrl": "links.next",
  "path": "path",
  "perPage": "meta.itemsPerPage",
  "prevPageUrl": "links.previous",
  "to": "meta.to",
  "total": "meta.totalItems",
}
`;

exports[`ResponseOptions > resolved defaults per driver > NestjsxCrud 1`] = `
{
  "currentPage": "page",
  "data": "data",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "pageCount",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "count",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "total",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Odata 1`] = `
{
  "currentPage": "current_page",
  "data": "value",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "last_page",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "@odata.nextLink",
  "path": "path",
  "perPage": "per_page",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "@odata.count",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Payload 1`] = `
{
  "currentPage": "page",
  "data": "docs",
  "firstPageUrl": "first_page_url",
  "from": "pagingCounter",
  "lastPage": "totalPages",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "limit",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "totalDocs",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Pocketbase 1`] = `
{
  "currentPage": "page",
  "data": "items",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "totalPages",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "perPage",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "totalItems",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Sieve 1`] = `
{
  "currentPage": "page",
  "data": "data",
  "firstPageUrl": "first_page_url",
  "from": "from",
  "lastPage": "totalPages",
  "lastPageUrl": "last_page_url",
  "nextPageUrl": "next_page_url",
  "path": "path",
  "perPage": "pageSize",
  "prevPageUrl": "prev_page_url",
  "to": "to",
  "total": "total",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Spring 1`] = `
{
  "currentPage": "page.number",
  "data": "_embedded",
  "firstPageUrl": "_links.first.href",
  "from": "from",
  "lastPage": "page.totalPages",
  "lastPageUrl": "_links.last.href",
  "nextPageUrl": "_links.next.href",
  "path": "path",
  "perPage": "page.size",
  "prevPageUrl": "_links.prev.href",
  "to": "to",
  "total": "page.totalElements",
}
`;

exports[`ResponseOptions > resolved defaults per driver > Strapi 1`] = `
{
  "currentPage": "meta.pagination.page",
  "data": "data",
  "firstPageUrl": "links.first",
  "from": "meta.pagination.from",
  "lastPage": "meta.pagination.pageCount",
  "lastPageUrl": "links.last",
  "nextPageUrl": "links.next",
  "path": "path",
  "perPage": "meta.pagination.pageSize",
  "prevPageUrl": "links.prev",
  "to": "meta.pagination.to",
  "total": "meta.pagination.total",
}
`;
